--- a/index.html
+++ b/index.html
@@ -1,20 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CodingAnna Blog</title>
-  <link rel="stylesheet" href="/assets/css/styles.css">
-</head>
-<body>
-  <header>
-    <h1>CodingAnna.xyz:~/blog$</h1>
-    <p>A blog for tutorials and Scripts related to my videos</p>
-    <nav>
-      <a href="/">home</a> | <a href="/about">about</a> | <a href="https://github.com/codingannaofficial/codinganna.xyz">contribute</a>
-    </nav>
-  </header>
-  <main>
+---
+layout: default
+title: CodingAnna Blog
+---
+
     <section>
       <h2>$ ls recentPosts/</h2>
 <ul>
@@ -33,9 +21,4 @@
 
 
        </section>
-  </main>
-  <footer>
-    <p>Contribute on <a href="https://github.com/codingannaofficial/codinganna.xyz">GitHub</a></p>
-  </footer>
-</body>
-</html>
+
